tests/errors/type-error-expr.ja
procedure main()
    int x
    int y
    stack z
    x ^= y + z
